fix overlapping problem

--- a/src/main/webapp/static/css/Carousel.css
+++ b/src/main/webapp/static/css/Carousel.css
@@ -28,8 +28,8 @@ ul {
 #warp .img-list {
   display: flex;
   position: relative;
-  left: 0px;
-  width: 2808px;
+  left: 0;
+  width: 3744px;
   height: 100%;
   transition: 0.5s ease;
 }
